--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "I = img.imread(' ')  "
+    "I = img.imread('/Users/caurental6/Documents/chs/image.JPG')"
    ]
   },
   {
@@ -51,22 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(510, 512, 3)\n"
+      "(447, 639, 3)\n"
      ]
     }
    ],
    "source": [
-    "n_row = \n",
-    "n_col =\n",
+    "n_row = I.shape[0]\n",
+    "n_col = I.shape[1]\n",
+    "n_channel = I.shape[2]\n",
     "\n",
-    "print( )"
+    "print(I.shape)\n",
+    "#print(n_row,n_col,n_channel)"
    ]
   },
   {
@@ -78,12 +80,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "if I.shape[2] == 3:\n",
-    "    I = "
+    "    I = np.mean(I, axis=2)\n"
    ]
   },
   {
@@ -95,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "I = "
+    "I = (I - np.min(I))/np.ptp(I)\n"
    ]
   },
   {
@@ -412,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
