--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Iy = "
+    "Iy = np.dot(Dy,I)"
    ]
   },
   {
