define functions for the visualization

--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -205,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "norm_gradient = "
+    "norm_gradient = np.add(np.square(Ix), np.square(Iy))"
    ]
   },
   {
@@ -221,21 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_image(I):\n",
     "    \n",
     "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow( , , )\n",
+    "    plt.imshow( I, cmap ='gray' ,norm = colors.LogNorm())\n",
     "    plt.title('input image')\n",
     "    plt.axis('off')\n",
     "        \n",
     "def plot_image_derivative_x(Ix):\n",
     "    \n",
     "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow( , , )\n",
+    "    plt.imshow( Ix, cmap ='gray' ,norm = colors.LogNorm())\n",
     "    plt.title('image derivative of x')\n",
     "    plt.axis('off')\n",
     "\n",
@@ -243,7 +243,7 @@
     "def plot_image_derivative_y(Iy):\n",
     "    \n",
     "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow( , , )\n",
+    "    plt.imshow( Iy, cmap ='gray' ,norm = colors.LogNorm())\n",
     "    plt.title('image derivative of y')\n",
     "    plt.axis('off')\n",
     "\n",
@@ -251,7 +251,7 @@
     "def plot_norm_gradient(norm_gradient):\n",
     "\n",
     "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow( , , )\n",
+    "    plt.imshow(norm_gradient, cmap ='gray' ,norm = colors.LogNorm())\n",
     "    plt.title('norm gradient')\n",
     "    plt.axis('off')"
    ]
