define derivative of my function

--- a/assignment_03_2.ipynb
+++ b/assignment_03_2.ipynb
@@ -68,7 +68,9 @@
    "source": [
     "def derivative_myfunction(x):\n",
     "    \n",
-    "    y_prime = \n",
+    "    h= 0.0000001\n",
+    "    \n",
+    "    y_prime = (myfunction(a+h) - myfunction(a)) / h \n",
     "    \n",
     "    return y_prime"
    ]
