define Taylor approximation

--- a/assignment_03_2.ipynb
+++ b/assignment_03_2.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def taylor(x, a):\n",
     "    \n",
-    "    y_approximate = \n",
+    "    y_approximate = myfunction(a) + derivative_myfunction(a)*(x-a)\n",
     "    \n",
     "    return y_approximate"
    ]
