--- a/assignment_03_2.ipynb
+++ b/assignment_03_2.ipynb
@@ -120,33 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace( , , )\n",
+    "x = np.linspace( -5,5 ,1000 )\n",
     "y = myfunction(x)\n",
     "\n",
-    "a = \n",
+    "a = 0.5\n",
     "b = myfunction(a)\n",
     "\n",
     "t = taylor(x, a)\n",
     "\n",
     "def plot_myfunction(x, y):\n",
     "    \n",
-    "    plt.plot( , , 'b')\n",
-    "    plt.xlim([ , ])\n",
-    "    plt.ylim([ , ])\n",
+    "    plt.plot( x,y , 'b')\n",
+    "    plt.xlim([ -5,5 ])\n",
+    "    plt.ylim([ -1, 20])\n",
     "\n",
     "    plt.show()\n",
     "\n",
     "def plot_myfunction_and_taylor(x, y, t, a, b):\n",
     "    \n",
-    "    plt.plot( , , 'b')\n",
-    "    plt.plot( , , 'r')\n",
-    "    plt.plot( , , 'go')\n",
-    "    plt.xlim([ , ])\n",
-    "    plt.ylim([ , ])\n",
+    "    plt.plot( x,y , 'b')\n",
+    "    plt.plot(x ,t , 'r')\n",
+    "    plt.plot( a, b, 'go')\n",
+    "    plt.xlim([-5 ,5 ])\n",
+    "    plt.ylim([ -1, 20])\n",
     "    \n",
     "    plt.show()"
    ]
