--- a/assignment_05.ipynb
+++ b/assignment_05.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +87,16 @@
     "#\n",
     "def construct_matrix_A(x, p):\n",
     "\n",
-    "    # use functions including : np.power\n",
+    "    #use functions including : np.power\n",
+    "    row = len(x)\n",
+    "    A = [[0 for i in range(p)] for j in range(row)]\n",
+    "    \n",
+    "    for i in range(len(x)) :\n",
+    "        for j in range(p) :\n",
+    "            A[i][j] = np.power(x[i],j)\n",
+    "    \n",
     "\n",
-    "    return A\n",
+    "    return np.array(A)\n",
     "\n",
     "#\n",
     "# x : independent variable\n",
@@ -100,8 +107,20 @@
     "def solve_polynomial_regression(x, y, p, alpha = 0):\n",
     "    \n",
     "    # use functions including : np.identity, np.matmul, np.linalg.inv \n",
-    "\n",
+    "    A = construct_matrix_A(x,p)\n",
+    "    I = np.identity(A.T.shape[0])\n",
+    "    \n",
+    "    # theta = inverse(A^t*A + alpha*I)*A^t*y\n",
+    "    theta = np.linalg.inv(np.matmul(A.T,A) + alpha * I )\n",
+    "    theta = np.matmul(theta,A.T)\n",
+    "    theta = np.matmul(theta,y)\n",
+    "    \n",
+    "    h = np.matmul(A,theta)\n",
+    "    \n",
     "    return h\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "h_01        = solve_polynomial_regression(x, y, 1)\n",
     "h_02        = solve_polynomial_regression(x, y, 2)\n",
@@ -120,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
