solve_polynomial_regression

--- a/assignment05.ipynb
+++ b/assignment05.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -78,22 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'h' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-680282320059>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0mh_01\u001b[0m        \u001b[0;34m=\u001b[0m \u001b[0msolve_polynomial_regression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0mh_02\u001b[0m        \u001b[0;34m=\u001b[0m \u001b[0msolve_polynomial_regression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0mh_04\u001b[0m        \u001b[0;34m=\u001b[0m \u001b[0msolve_polynomial_regression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-680282320059>\u001b[0m in \u001b[0;36msolve_polynomial_regression\u001b[0;34m(x, y, p, alpha)\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# use functions including : np.identity, np.matmul, np.linalg.inv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mh_01\u001b[0m        \u001b[0;34m=\u001b[0m \u001b[0msolve_polynomial_regression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'h' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#\n",
     "# A : [ x_1^0, x_1^1, ... , x_1^{p-1} ; x_2^0, x_2^1, ... , x_2^{p-1} ; ... ; x_n^0, x_n^1, ... , x_n^{p-1}]\n",
@@ -120,8 +107,18 @@
     "def solve_polynomial_regression(x, y, p, alpha = 0):\n",
     "    \n",
     "    # use functions including : np.identity, np.matmul, np.linalg.inv \n",
-    "\n",
+    "    A = construct_matrix_A(x,p)\n",
+    "    I = np.identity(A.T.shape[0])\n",
+    "    \n",
+    "    # theta = inverse(A^t*A + alptha+I)*A^t*y\n",
+    "    theta = np.linalg.inv(np.matmul(A.T,A) + alpha * I )\n",
+    "    theta = np.matmul(theta,A.T)\n",
+    "    theta = np.matmul(theta,y)\n",
+    "    \n",
+    "    h = np.matmul(A,theta)\n",
+    "    \n",
     "    return h\n",
+    "\n",
     "\n",
     "h_01        = solve_polynomial_regression(x, y, 1)\n",
     "h_02        = solve_polynomial_regression(x, y, 2)\n",
