--- a/assignment05.ipynb
+++ b/assignment05.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "    A = construct_matrix_A(x,p)\n",
     "    I = np.identity(A.T.shape[0])\n",
     "    \n",
-    "    # theta = inverse(A^t*A + alptha+I)*A^t*y\n",
+    "    # theta = inverse(A^t*A + alpha*I)*A^t*y\n",
     "    theta = np.linalg.inv(np.matmul(A.T,A) + alpha * I )\n",
     "    theta = np.matmul(theta,A.T)\n",
     "    theta = np.matmul(theta,y)\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
