compute the loss function

--- a/assignment_06.ipynb
+++ b/assignment_06.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_loss(x, y, theta0, theta1):\n",
     "\n",
+    "    loss_sum = 0\n",
+    "    for i in range(0, N):\n",
+    "        \n",
+    "        loss_sum = loss_sum + pow((theta0 + theta1*x[i] - y[i]),2)\n",
     "    \n",
+    "    \n",
+    "    loss = (1/(2*N))*loss_sum\n",
+    "\n",
     "    return loss"
    ]
   },
