compute the gradient for each model parameter

--- a/assignment_06.ipynb
+++ b/assignment_06.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,25 +105,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_gradient_theta0(x, y, theta0, theta1):\n",
     "\n",
-    "\n",
+    "    sum1 = 0 \n",
+    "    for i in range(0,N):\n",
+    "        \n",
+    "        sum1 = sum1 + (theta0 + theta1*x[i] - y[i])\n",
+    "        \n",
+    "   \n",
+    "    dL = (2/N)*sum1\n",
+    "    \n",
     "    return dL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_gradient_theta1(x, y, theta0, theta1):\n",
     "\n",
-    "\n",
+    "    sum2 = 0\n",
+    "    for i in range(0,N):\n",
+    "        sum2 = sum2 + ((theta0 + theta1*x[i]-y[i])*x[i])\n",
+    "            \n",
+    "    \n",
+    "    dL = (2/N)*sum2\n",
+    "    \n",
     "    return dL"
    ]
   },
