plot the results

--- a/assignment_06.ipynb
+++ b/assignment_06.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -469,18 +469,18 @@
       "iteration =  306, loss = 4.53404\n",
       "iteration =  307, loss = 4.53404\n",
       "iteration =  308, loss = 4.53404\n",
-      "iteration =  309, loss = 4.53404\n",
-      "iteration =  310, loss = 4.53404\n",
-      "iteration =  311, loss = 4.53404\n",
-      "iteration =  312, loss = 4.53404\n",
-      "iteration =  313, loss = 4.53404\n",
-      "iteration =  314, loss = 4.53404\n"
+      "iteration =  309, loss = 4.53404\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "iteration =  310, loss = 4.53404\n",
+      "iteration =  311, loss = 4.53404\n",
+      "iteration =  312, loss = 4.53404\n",
+      "iteration =  313, loss = 4.53404\n",
+      "iteration =  314, loss = 4.53404\n",
       "iteration =  315, loss = 4.53404\n",
       "iteration =  316, loss = 4.53404\n",
       "iteration =  317, loss = 4.53404\n",
@@ -753,19 +753,19 @@
       "iteration =  584, loss = 4.53402\n",
       "iteration =  585, loss = 4.53402\n",
       "iteration =  586, loss = 4.53402\n",
-      "iteration =  587, loss = 4.53402\n"
+      "iteration =  587, loss = 4.53402\n",
+      "iteration =  588, loss = 4.53402\n",
+      "iteration =  589, loss = 4.53402\n",
+      "iteration =  590, loss = 4.53402\n",
+      "iteration =  591, loss = 4.53402\n",
+      "iteration =  592, loss = 4.53402\n",
+      "iteration =  593, loss = 4.53402\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration =  588, loss = 4.53402\n",
-      "iteration =  589, loss = 4.53402\n",
-      "iteration =  590, loss = 4.53402\n",
-      "iteration =  591, loss = 4.53402\n",
-      "iteration =  592, loss = 4.53402\n",
-      "iteration =  593, loss = 4.53402\n",
       "iteration =  594, loss = 4.53402\n",
       "iteration =  595, loss = 4.53402\n",
       "iteration =  596, loss = 4.53402\n",
@@ -1016,17 +1016,17 @@
       "iteration =  841, loss = 4.53402\n",
       "iteration =  842, loss = 4.53402\n",
       "iteration =  843, loss = 4.53402\n",
-      "iteration =  844, loss = 4.53402\n"
+      "iteration =  844, loss = 4.53402\n",
+      "iteration =  845, loss = 4.53402\n",
+      "iteration =  846, loss = 4.53402\n",
+      "iteration =  847, loss = 4.53402\n",
+      "iteration =  848, loss = 4.53402\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration =  845, loss = 4.53402\n",
-      "iteration =  846, loss = 4.53402\n",
-      "iteration =  847, loss = 4.53402\n",
-      "iteration =  848, loss = 4.53402\n",
       "iteration =  849, loss = 4.53402\n",
       "iteration =  850, loss = 4.53402\n",
       "iteration =  851, loss = 4.53402\n",
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,6 +1234,8 @@
     "\n",
     "    plt.figure(figsize=(8,6))\n",
     "    plt.title('linear regression result')\n",
+    "    plt.plot(x,y,'.',color = 'blue')\n",
+    "    plt.plot(x,f, color = 'red')\n",
     "\n",
     "    \n",
     "    plt.tight_layout()\n",
@@ -1242,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1252,7 @@
     "\n",
     "    plt.figure(figsize=(8,6))\n",
     "    plt.title('loss curve')\n",
-    "\n",
+    "    plt.plot(loss_iteration, color = 'red')\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()"
@@ -1258,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,6 +1270,8 @@
     "    plt.figure(figsize=(8,6))\n",
     "    plt.title('model parameter')\n",
     "\n",
+    "    plt.plot(theta0_iteration, color = 'blue')\n",
+    "    plt.plot(theta1_iteration, color = 'green')\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
@@ -1275,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,18 +1287,20 @@
     "X0  = np.arange(-10, 10, 0.1)\n",
     "X1  = np.arange(-10, 10, 0.1)\n",
     "\n",
-    "grid_theta0, grid_theta1 = \n",
+    "grid_theta0, grid_theta1 = np.meshgrid(X0,X1)\n",
     "\n",
-    "grid_loss   = \n",
+    "grid_loss   = compute_loss(x, y, grid_theta0, grid_theta1)\n",
     "\n",
     "\n",
     "def plot_loss_surface(grid_theta0, grid_theta1, grid_loss):\n",
     "\n",
     "    fig = plt.figure(figsize=(8,8))\n",
-    "    plt.title('loss surface')\n",
-    "\n",
-    "\n",
+    "   \n",
+    "    ax3d = fig.add_subplot(111,projection='3d')\n",
+    "    ax3d.plot_surface(grid_theta0,grid_theta1,grid_loss,cmap='plasma')\n",
+    "    \n",
     "    plt.tight_layout()\n",
+    "    plt.title('loss surface')\n",
     "    plt.show()"
    ]
   },
