--- a/assignment_07.ipynb
+++ b/assignment_07.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -8.93733729 -10.73164681 -14.22640408]\n",
+      " [ -8.06071484 -10.78788051  -6.7101767 ]\n",
+      " [-10.26082727 -10.09725504 -12.67089679]\n",
+      " ...\n",
+      " [  8.87431539  10.16745925  13.25558254]\n",
+      " [  8.67785323  11.09105394   7.92689264]\n",
+      " [  9.82222519   9.52188547  10.00816084]]\n",
+      "2500\n",
+      "2500\n",
+      "[ -8.93733729  -8.06071484 -10.26082727 ...   8.87431539   8.67785323\n",
+      "   9.82222519]\n",
+      "[-10.73164681 -10.78788051 -10.09725504 ...  10.16745925  11.09105394\n",
+      "   9.52188547]\n",
+      "[-14.22640408  -6.7101767  -12.67089679 ...  13.25558254   7.92689264\n",
+      "  10.00816084]\n"
+     ]
+    }
+   ],
    "source": [
     "fname_data  = 'assignment_07_data.csv'\n",
     "\n",
@@ -53,7 +75,14 @@
     "\n",
     "    xx[i] = data[i,0]\n",
     "    yy[i] = data[i,1]\n",
-    "    zz[i] = data[i,2]"
+    "    zz[i] = data[i,2]\n",
+    "    \n",
+    "print(data)\n",
+    "print(num_data)\n",
+    "print(xx.shape[0])\n",
+    "print(np.transpose(xx))\n",
+    "print(yy)\n",
+    "print(zz)"
    ]
   },
   {
@@ -65,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +162,14 @@
     "    \n",
     "    residual, n = compute_residual(theta,x,y,z)\n",
     "    \n",
-    "    loss = (1/n)* np.dot(np.transpose(x*theta - z), (x*theta -z) )\n",
+    "    sum = 0\n",
     "    \n",
+    "    for i in range (0,n):\n",
+    "        sum = sum + pow(compute_residual(theta[i],x[i],y[i],z[i]),2)\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    loss = (1/(2*n))*sum\n",
     "    # ============================\n",
     "    return loss"
    ]
@@ -148,14 +183,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_gradient(theta, x, y, z):\n",
     "    # ===== FILL UP THE CODE =====\n",
-    "\n",
-    "    grad = (2/n)* np.dot(x.T, (x*theta - y) )\n",
+    "    \n",
+    "   \n",
+    "    one = np.ones((num_data,1))\n",
+    "    x = np.reshape(x,(num_data,1))\n",
+    "    y = np.reshape(y,(num_data,1))\n",
+    "    z = np.reshape(z,(num_data,1))\n",
+    "    \n",
+    "    X = np.hstack((one,x))\n",
+    "    X = np.hstack((X,y))\n",
+    "    \n",
+    "    print(X.shape)\n",
+    "    print(theta)\n",
+    "    print(theta.shape)\n",
+    "    print((np.transpose(X)).shape)\n",
+    "    print((X*theta).shape)\n",
+    "    \n",
+    "    grad = (1/num_data)*np.dot( np.transpose(X), X*theta - z ) \n",
+    "    \n",
     "    # ============================\n",
     "    return grad"
    ]
@@ -169,13 +220,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "tags": [
      "outputPrepend"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2500, 3)\n",
+      "[[0]\n",
+      " [0]\n",
+      " [0]]\n",
+      "(3, 1)\n",
+      "(3, 2500)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2500,3) (3,1) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-123-37a2d794b430>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mtheta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtheta\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcompute_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0myy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mzz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0myy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mzz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-122-870f17fa1c78>\u001b[0m in \u001b[0;36mcompute_gradient\u001b[0;34m(theta, x, y, z)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mgrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mnum_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mtheta\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mz\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2500,3) (3,1) "
+     ]
+    }
+   ],
    "source": [
     "num_iteration   = 1000\n",
     "learning_rate   = 0.01\n",
@@ -183,10 +259,17 @@
     "theta           = np.array((0, 0, 0))\n",
     "theta_iteration = np.zeros((num_iteration, theta.size))\n",
     "loss_iteration  = np.zeros(num_iteration)\n",
-    "\n",
+    "#print(theta)\n",
     "for i in range(num_iteration):\n",
     "    # ===== FILL UP THE CODE =====\n",
-    "\n",
+    "    \n",
+    "    \n",
+    "    theta = theta - learning_rate * compute_gradient(theta,xx,yy,zz)\n",
+    "    loss = compute_loss(theta,xx,yy,zz)\n",
+    "    \n",
+    "    \n",
+    "    theta_iteration[i] = theta\n",
+    "    loss_iteration[i] = loss\n",
     "    \n",
     "    # ============================\n",
     "    print(\"iteration = %4d, loss = %5.5f\" % (i, loss))"
@@ -194,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
