--- a/assignment_07.ipynb
+++ b/assignment_07.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,31 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 239,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ -8.93733729 -10.73164681 -14.22640408]\n",
-      " [ -8.06071484 -10.78788051  -6.7101767 ]\n",
-      " [-10.26082727 -10.09725504 -12.67089679]\n",
-      " ...\n",
-      " [  8.87431539  10.16745925  13.25558254]\n",
-      " [  8.67785323  11.09105394   7.92689264]\n",
-      " [  9.82222519   9.52188547  10.00816084]]\n",
-      "2500\n",
-      "2500\n",
-      "[ -8.93733729  -8.06071484 -10.26082727 ...   8.87431539   8.67785323\n",
-      "   9.82222519]\n",
-      "[-10.73164681 -10.78788051 -10.09725504 ...  10.16745925  11.09105394\n",
-      "   9.52188547]\n",
-      "[-14.22640408  -6.7101767  -12.67089679 ...  13.25558254   7.92689264\n",
-      "  10.00816084]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fname_data  = 'assignment_07_data.csv'\n",
     "\n",
@@ -77,12 +55,12 @@
     "    yy[i] = data[i,1]\n",
     "    zz[i] = data[i,2]\n",
     "    \n",
-    "print(data)\n",
-    "print(num_data)\n",
-    "print(xx.shape[0])\n",
-    "print(np.transpose(xx))\n",
-    "print(yy)\n",
-    "print(zz)"
+    "#print(data)\n",
+    "#print(num_data)\n",
+    "#print(xx.shape[0])\n",
+    "#print(np.transpose(xx))\n",
+    "#print(yy)\n",
+    "#print(zz)"
    ]
   },
   {
@@ -94,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +175,10 @@
     "    #print(\"np.dot(X,theta).shape\",np.dot(X,theta).shape)\n",
     "    #print(\"(np.dot(X,theta) - z).shape\", (np.dot(X,theta) - z).shape)\n",
     "    #print(\"grad\",(np.dot( np.transpose(X), np.dot(X,theta) - z )).shape )\n",
+    "    # cf)\n",
+    "    # Xtheta(2500,3)(3,)=(2500,) / Xtheta-z =(2500,)\n",
+    "    # Xt = (3,2500) / Xt(Xtheta -a) = (3,2500)(2500,)=(3,) \n",
+    "    # (3,1) => 2차원, (3,)=>1차원\n",
     "    grad = (2/num_data)*np.dot( np.transpose(X), np.dot(X,theta) - z ) \n",
     "    #print(grad.shape)\n",
     "    # ============================\n",
@@ -212,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 244,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -849,13 +831,7 @@
       "iteration =  623, loss = 7.12144\n",
       "iteration =  624, loss = 7.12144\n",
       "iteration =  625, loss = 7.12144\n",
-      "iteration =  626, loss = 7.12144\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "iteration =  626, loss = 7.12144\n",
       "iteration =  627, loss = 7.12144\n",
       "iteration =  628, loss = 7.12144\n",
       "iteration =  629, loss = 7.12144\n",
@@ -903,7 +879,13 @@
       "iteration =  671, loss = 7.12144\n",
       "iteration =  672, loss = 7.12144\n",
       "iteration =  673, loss = 7.12144\n",
-      "iteration =  674, loss = 7.12144\n",
+      "iteration =  674, loss = 7.12144\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "iteration =  675, loss = 7.12144\n",
       "iteration =  676, loss = 7.12144\n",
       "iteration =  677, loss = 7.12144\n",
@@ -1260,41 +1242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 245,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.06034377 -0.68468046  1.38839194]\n",
-      " [-0.11933853 -0.88035509  1.78283046]\n",
-      " [-0.17711291 -0.93626633  1.89489034]\n",
-      " ...\n",
-      " [-3.00725346 -0.95822478  1.93915184]\n",
-      " [-3.00725346 -0.95822478  1.93915184]\n",
-      " [-3.00725346 -0.95822478  1.93915184]]\n",
-      "(1000, 3)\n",
-      "\n",
-      "\n",
-      "[[-0.06034377 -0.68468046  1.38839194]\n",
-      " [-0.11933853 -0.88035509  1.78283046]\n",
-      " [-0.17711291 -0.93626633  1.89489034]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = theta[0] + theta[1] * xx + theta[2] * yy\n",
-    "print(theta_iteration)\n",
-    "print(theta_iteration.shape)\n",
-    "print()\n",
-    "#print(theta_iteration[:0])\n",
-    "print()\n",
-    "\n",
-    "\n",
-    "#print(theta_iteration[:1])\n",
-    "\n",
-    "print(theta_iteration[:3])"
+    "#print(theta_iteration)\n",
+    "#print(theta_iteration.shape)\n"
    ]
   },
   {
@@ -1306,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -1546,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -1594,6 +1548,13 @@
    "source": [
     "plot_surface(XX, YY, ZZ, xx, yy, zz)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
