--- a/assignment_08.ipynb
+++ b/assignment_08.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +145,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_accuracy(theta, x,, label):\n",
+    "    \n",
+    "    h = sigmoid(x,y,theta)\n",
+    "    print(\"h\",h)\n",
+    "    p = (h >= 0.5)\n",
+    "    print(\"p\",p)\n",
+    "    correct = np.sum(p.astype(int) == label)\n",
+    "    print(\"correct\",correct)\n",
+    "    accuracy = correct/num_data\n",
+    "   \n",
+    "    return accuracy"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -189,7 +208,19 @@
     "    theta_iteration[i] = theta\n",
     "    loss_iteration[i] = loss\n",
     "    \n",
-    "    #print(\"loss\",loss_iteration[i],\" theta\",theta_iteration[i])\n"
+    "    #print(\"loss\",loss_iteration[i],\" theta\",theta_iteration[i])\n",
+    "theta_optiaml = theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_classifier1 = compute_accuracy(theta_optimal, x,y, label)\n",
+    "\n",
+    "print(\"ac1\",accuracy_classifier1)\n"
    ]
   },
   {
@@ -269,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
